--- a/public/css/test.css
+++ b/public/css/test.css
@@ -26,8 +26,12 @@ img {
 
 #menu {
     clear: both;
-    height: 29px;
+    height: 40px;
     margin-bottom: 3px;
+}
+
+#menu a {
+    margin: 5px;
 }
 
 #column-left {
