--- a/public/css/test.css
+++ b/public/css/test.css
@@ -21,12 +21,9 @@ img {
 
 #container {
     padding: 0px 10px 7px 10px;
-    height: 430px;
 }
 
 #menu {
-    clear: both;
-    height: 40px;
     margin-bottom: 3px;
 }
 
@@ -37,19 +34,24 @@ img {
 #column-left {
     background: #FFF;
     border: 1px solid #CCC;
-    float: left;
-    width: 25%;
     height: 410px;
     overflow: auto;
+    margin-right: 30px;
+}
+
+@media screen and (max-width: 500px) {
+    #column-left {
+        height: 100px;
+        margin-right: 0px;
+        margin-bottom: 10px;
+    }
 }
 
 #column-right {
     background: #FFF;
     border: 1px solid #CCC;
-    float: right;
-    width: 73%;
-    /*height: 410px;
-    overflow: auto;*/
+    height: 410px;
+    overflow: auto;
     text-align: center;
 }
 
